Bug note ... may not get this part working without solving the terminal issue.

--- a/spatial/note/SALO_DIRECT.Rmd
+++ b/spatial/note/SALO_DIRECT.Rmd
@@ -1,5 +1,6 @@
 ---
 title: An R Markdown document converted from "/Users/dkapan/GitHub/COMB/spatial/note/SALO_DIRECT.ipynb"
+[ ]BUG, authentication to CFO does note work in an .Rmd
 output: html_document
 ---
 
